# minigui-android

./: .gitignore  configure.ac
include/: common.h
src/ial/: Makefile.am  androidial.c  androidial.h  ial.c
src/kernel/: event.c  init.c
src/newgal/: CMakeLists.txt  newgal.c  sysvideo.h  video.c
src/newgal/androidvideo/: CMakeLists.txt  Makefile.am  androidvideo.c  androidvideo.h
src/sysres/: mgetc.c
src/textedit/: object.h
